// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`React 组件测试 click Hello 1`] = `
.c0 {
  background-color: red;
}

<Hello>
  <styled.div
    onClick={[Function]}
  >
    <div
      className="c0"
      onClick={[Function]}
    >
      Hello World! clicked
    </div>
  </styled.div>
</Hello>
`;

exports[`React 组件测试 mount render Hello 1`] = `
.c0 {
  background-color: red;
}

<Hello>
  <styled.div
    onClick={[Function]}
  >
    <div
      className="c0"
      onClick={[Function]}
    >
      Hello World!
    </div>
  </styled.div>
</Hello>
`;

exports[`React 组件测试 shallow render Hello 1`] = `
<styled.div
  onClick={[Function]}
>
  Hello World!
</styled.div>
`;
